--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,7 @@
-$primary-color: red;
+$primary-font: 'Roboto';
+
+$primary-color: rgb(45, 50, 104);
+$secondary-color: rgb(87, 93, 157);
 
 body, html {
     margin: 0;
@@ -7,11 +10,69 @@ body, html {
   
   * {
     box-sizing: border-box;
+    font-family: $primary-font, sans-serif;
   }
   
   .container {
     width: 100%;
     height: 100%;
-    color: $primary-color;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  body, html, .header, .mainBody, .footer {
+    width: 100%;
+    height: 100%;
   }
   
+  .header {
+    height: 100px;
+    background-color: $secondary-color;
+  }
+
+  .footer {
+    height: 200px;
+    background-color: $primary-color;
+  }
+
+  .mainBody, .slideContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .slideContainer {
+    height: 80%;
+    width: 100%;
+    background-color: rgb(244, 244, 244);
+    position: relative;
+  }
+
+  .arrow {
+    height: 50px;
+    width: 50px;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    cursor: pointer;
+  }
+
+  #forward {
+    background-image: url('./images/chevron-right.png');
+    right: 0;
+  }
+
+  #backward {
+    background-image: url('./images/chevron-left.png');
+    left: 0;
+  }
+
+  .slide {
+    height: 80%;
+    width: 80%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
