add photos, create a module to load the photos with forward and backward keys

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -76,3 +76,23 @@ body, html {
     background-repeat: no-repeat;
     background-size: contain;
   }
+
+  .pic1 {
+    background-image: url('./images/pic1.jpeg');
+  }
+
+  .pic2 {
+    background-image: url('./images/pic2.jpeg');
+  }
+
+  .pic3 {
+    background-image: url('./images/pic3.jpeg');
+  }
+
+  .pic4 {
+    background-image: url('./images/pic4.jpeg');
+  }
+
+  .pic5 {
+    background-image: url('./images/pic5.jpeg');
+  }
